src/test/deca/context/valid/created/decl_class/redefinition_method_badname.deca
// Description :
//    redéfinition signature différent nom
//
// Resultats :
//		Ok

class A{
void meth(int x){}
}

class B extends A{
void meth(int y){}
}