src/test/deca/context/invalid/created/decl_class/redefinition_method_badname.deca
// Description :
//    redéfinition signature différent nom
// Resultats :
//		Erreur contextuelle
//    	Ligne 12

class A{
void meth(int x){}
}

class B extends A{
void meth(int y){}
}